<resources>
    <string name="app_name">Deckadence</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_decks">Decks</string>
    <string name="title_add">Add</string>
    <string name="last_studied">Last Studied:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_deck">Add Deck</string>
    <string name="dekedence_logo">dekedence_logo</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="again_answer">Again</string>
    <string name="good_answer">Good</string>
    <string name="easy_answer">Easy</string>
    <string name="add_card">Add Card</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
</resources>